--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.8"
 beautifulsoup4 = "^4.11.1"
 selenium = "^4.5.0"
 requests = "^2.28.1"
+grip = "^4.6.1"
 
 [build-system]
 requires = ["poetry-core"]
